--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,11 @@
     xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"  
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"  
     id="WebApp_ID" version="3.0">  
-    <display-name>Archetype Created Web Application</display-name>  
+    <display-name>servicechat</display-name>  
    <!-- 起始欢迎界面 -->  
     <welcome-file-list>  
         <welcome-file>index.jsp</welcome-file>  
-           <welcome-file>index.html</welcome-file>  
+        <welcome-file>index.html</welcome-file>  
     </welcome-file-list>  
    <!-- 设置session超时时间为15分钟 -->
   <session-config>
@@ -59,5 +59,5 @@
         内部错误  
         <error-code>500</error-code>  
         <location>/WEB-INF/errorpage/500.jsp</location>  
-    </error-page>  
-</web-app>   -->
+    </error-page>   -->
+</web-app>  
