--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ logging.level.com.favorites=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 #数据库配置
+#mybits
+mybatis.config-locations=classpath:mybatis/mybatis-config.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+
+
 spring.datasource.url=jdbc:mysql://localhost:3306/xzg?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=xzg
 spring.datasource.password=xzg
@@ -41,4 +46,11 @@ spring.redis.pool.max-idle=8
 # 连接池中的最小空闲连接
 spring.redis.pool.min-idle=0  
 # 连接超时时间（毫秒）
-spring.redis.timeout=0  
+spring.redis.timeout=0 
+#thymeleaf start
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+#开发时关闭缓存,不然没法看到实时页面
+spring.thymeleaf.cache=false
+#thymeleaf end
