--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 #日志配置
+# LOG4J配置
+log4j.rootCategory=INFO,stdout
 logging.path=/home/log/log.log
 logging.level.com.favorites=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
+logging.level.org.mybatis=DEBUG,INFO
 #数据库配置
 #mybits
 mybatis.config-locations=classpath:mybatis/mybatis-config.xml
