--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,3 +57,10 @@ spring.thymeleaf.content-type=text/html
 #开发时关闭缓存,不然没法看到实时页面
 spring.thymeleaf.cache=false
 #thymeleaf end
+# 这里使用的是https证书的配置
+server.ssl.key-store=classpath:key/keystore.p12
+server.ssl.key-store-password=123456
+#密钥仓库类型
+server.ssl.keyStoreType=PKCS12
+#别名
+server.ssl.keyAlias:tomcat
