增加多表查询

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-#日志配置
+#日志配置 默认情况下spring boot是不将日志输出到日志文件中
 # LOG4J配置
+debug=true
 log4j.rootCategory=INFO,stdout
-logging.path=/home/log/log.log
+logging.path=/home/log/
+logging.file=log.log
+
 logging.level.com.favorites=DEBUG
 logging.level.org.springframework.web=INFO
-logging.level.org.hibernate=ERROR
-logging.level.org.mybatis=DEBUG,INFO
+logging.level.org.hibernate=ERROR,INFO
+logging.level.org.mybatis=DEBUG
 #数据库配置
 #mybits
 mybatis.config-locations=classpath:mybatis/mybatis-config.xml
